# cryptosystem

./: Cargo.toml  README.md  build.rs  sizes.txt
src/: auto_tests.rs  base64_utils.rs  ciphertext.rs  crypto_array.rs  crypto_io.rs  cryptosystem.rs  error.rs  lib.rs  public_key.rs  secret_key.rs  shared_secret.rs  signature.rs  sizes.rs  symmetric_key.rs
src/composites/: key_encapsulation.rs  mod.rs  public_key.rs
src/defaults/: chacha20_poly1305.rs  dilithium.rs  ed25519.rs  ed25519_signing.rs  kyber.rs  mod.rs  x25519.rs
src/serde/: mod.rs
