[package]
name = "cryptosystem"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1"
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.214", optional = true }
base64 = { version = "0.22.1", optional = true }
hex = { version = "0.4.3", optional = true }
ed25519-dalek = { version = "2.1.1", features = [ "rand_core" ], optional = true }
x25519-dalek = { version = "2.0.1", features = [ "static_secrets" ], optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
ecies-ed25519 = { version = "0.5.1", optional = true }
ring = { version = "0.17.13", optional = true }
rand = "0.9.2"
# We use `deterministic` to manually generate parameters rather than bridging `rand` versions
ml-kem = { version = "0.2.1", features = [ "deterministic" ], optional = true }
blake3 = "1.8.2"
typebits = { version = "0.1.0", git = "https://github.com/arctic-hen7/typebits", features = [ "array" ] }
ml-dsa = { version = "=0.0.4", features = [ "pkcs8" ], optional = true } # Exact version important
pkcs8 = { version = "0.10.2", optional = true } # `ml-dsa` doesn't re-export
rand_chacha = "0.9.0"

[dev-dependencies]
serde = { version = "1.0.214", features = [ "derive" ] }

[features]
#default = []
default = ["serde", "hex", "base64", "der", "pem", "default-chacha20poly1305", "default-ed25519", "default-x25519", "default-kyber", "default-dilithium" ] # DEV

std = []
serde = [ "dep:serde", "bincode" ]
der = []
pem = [ "der", "base64", "ed25519-dalek?/pkcs8" ]

default-chacha20poly1305 = [ "chacha20poly1305" ]
default-ed25519 = [ "ed25519-dalek" ]
default-x25519 = [ "x25519-dalek" ]
default-kyber = [ "ml-kem" ]
default-dilithium = [ "ml-dsa", "pkcs8" ]
